Ajustes / melhorias